# automisc

./: .gitignore  AGENTS.md  Architecture.md  README.md  STRUCTURE.md  fix.md  fix_base64_image_file_windows.md  fix_gui_zip_trigger_no_bruteforce.md  fix_zip_pseudo_cdh_detection.md  prd.md  pyproject.toml  requirements.txt  tools.md  upgrade.md
Challenge/: meihuai.txt
Challenge/QR_code__extract/foremost_out/: audit.txt
Challenge/steg__foremost/foremost_out/: audit.txt
Challenge/stress/01_pseudo_unzipped/: flag.txt  flag{pseudo_test_001}.txt
docs/changelog/: AGENTS.md_archived.md
docs/decisions/: __init__.py  v0.1.0b-PR7-vol-environment.md
extend-tools/: .gitignore  README.md  fix_qemu_img_setup.ps1  install.ps1  install.sh  manifest.yaml
src/automisc/: __init__.py  __main__.py
src/automisc/core/: __init__.py  chains.py  dag.py  encoding_detector.py  exceptions.py  journal.py  logging_setup.py  orchestrator.py  registry.py  result.py  router.py  suspicious.py
src/automisc/gui/: __init__.py  auto_runner.py  chain_runner.py  decode_runner.py  journal_panel.py  lsb_bytes_dialog.py  lsb_tool_dialog.py  main_window.py  menu_dock.py  output_view.py  runner.py
src/automisc/tools/: __init__.py  base.py  paths.py
tests/: conftest.py
tests/fixtures/: sample_base64_stego.txt  sample_http_flag.pcap  sample_text.txt
tests/fixtures/challenges/: .gitignore
tests/fixtures/sample_archive_flag_unzipped/: flag_file.txt  readme.txt
tests/fixtures/sample_archive_pseudo_real_unzipped/: flag{pseudo}.txt
tests/integration/: test_lsb_tool_regression.py
tests/integration/gui/: __init__.py  test_auto_run_on_drop.py  test_auto_runner.py  test_chain_menu.py  test_dag_chain.py  test_lsb_bytes_chain_gui.py  test_lsb_tool_chain_gui.py  test_main_window.py  test_pyc_decompiler_gui.py  test_runner.py
tests/unit/: conftest.py  test_pr1_integration.py  test_pr9_package_base.py
tests/unit/core/: test_exceptions.py  test_journal.py  test_logging_setup.py  test_orchestrator.py  test_registry.py  test_router.py  test_suspicious.py  test_suspicious_keyword_substring.py
tests/unit/gui/: test_auto_runner.py  test_auto_runner_lsb_detect.py  test_auto_runner_pool_order.py  test_decoder_menu.py  test_find_suspicious_runner.py  test_gui_bugfix.py  test_journal_panel.py  (+9 more)
upgrade/: 2026-06-14-new-fixtures.md  fix_decoder_registry_pyc_magic.md  fix_pyc_uncompyle6_consts_bug.md  fix_qemu_img_friendly_error.md  fix_resolve_tool_binary_subdir.md  v0.1.1-auto-run.md  v0.5-7z-layout-migrate.md  v0.5-DAG-chain-realtest.md  v0.5-DAG-chain-refactor.md  v0.5-DAG-chain.md  v0.5-DAG-stress-test.md  v0.5-GUI-bugfix.md  v0.5-IO-widget.md  v0.5-LSB-router.md  v0.5-auto-run-pool-steghide-last.md  v0.5-auto-run-suggest.md  v0.5-automisc-icon.md  v0.5-base-rot-decoders.md  v0.5-base64-image.md  v0.5-binwalk-extract.md  v0.5-cipher-decoders.md  v0.5-coords-qr.md  v0.5-decoder-arch-doc.md  v0.5-decoder-friendly-candidate.md  v0.5-decoder-friendly-hint.md  v0.5-decoder-menu.md  v0.5-dialog-when-write-file.md  v0.5-extend-tools-subdir-flexible.md  v0.5-fix-find-suspicious-race-condition.md  v0.5-hex-ascii-fix.md  v0.5-hex-router.md  v0.5-journal-clear-on-new-file.md  v0.5-journal-highlight-keywords.md  v0.5-keyword-substring-journal.md  v0.5-keyword-variants.md  v0.5-lsb-byte-stream-extract.md  v0.5-lsb-bytes-auto-run.md  v0.5-lsb-bytes-gui.md  v0.5-lsb-detector.md  v0.5-lsb-extract-output-bytes.md  (+56 more)
(+146 files in other folders)
