[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automisc"
version = "0.1.0b.dev0"
description = "AutoMisc — macOS GUI 半自动化 CTF Misc 工具箱（v0.1.dev）"
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Minzhi Zhou" }]
keywords = ["ctf", "misc", "steganography", "forensics", "security"]

# v0.1 阶段：仅声明核心依赖；GUI / 隐写 / 取证 Python 包在后续 PR 追加
dependencies = [
    "python-evtx>=0.8.1",  # PR6: Forensics/Log Windows EVTX 日志解析
    "volatility3>=2.0",     # PR7-envfix: Forensics/Memory（vol3 官方 Python 3 port；vol2 留 v0.5+ docker）
    "base91>=1.0.1",        # encoders: base91 编解码（自实现易出 bug，用 PyPI 库）
]