[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automisc"
version = "0.1.0b.dev0"
description = "AutoMisc — macOS GUI 半自动化 CTF Misc 工具箱（v0.1.dev）"
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Minzhi Zhou" }]
keywords = ["ctf", "misc", "steganography", "forensics", "security"]

# v0.1 阶段：仅声明核心依赖；GUI / 隐写 / 取证 Python 包在后续 PR 追加
dependencies = [
    "python-evtx>=0.8.1",  # PR6: Forensics/Log Windows EVTX 日志解析
    "volatility3>=2.0",     # PR7-envfix: Forensics/Memory（vol3 官方 Python 3 port；vol2 留 v0.5+ docker）
    "base91>=1.0.1",        # encoders: base91 编解码（自实现易出 bug，用 PyPI 库）
    "PySide6>=6.6",         # v0.1.1 GUI: PySide6 主窗口（按 §2.5.1 简化流程直接 main commit）
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

# GUI 依赖（v0.1.1 范围）
gui = ["PySide6>=6.6"]

# GUI 测试依赖（pytest-qt）
test-gui = ["pytest-qt>=4.2"]

[project.scripts]
automisc = "automisc.__main__:main"
automisc-gui = "automisc.__main__:main_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"automisc" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["src"]
addopts = "-ra -q"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]